# sturdy-succotash

./: .env  Cargo.toml  Dockerfile  docker-compose.yml  locaties.xml
.github/workflows/: publish.yaml
.sqlx/: query-100ca6ccff52399bd5f672827399c1c508b3dcd6cf2e6dcb82b8a7194ced52dd.json  query-11fdbd1ac53e2be34c204b14fceec8a891979935cc18c4d5c3b03779a561abdd.json  query-146f40124c199de4ddb4449364761ea2f27c8ca9dd9115bf601e99f36add76be.json  query-226e85081516a01e57974bb0d89136b4785f847c1460c814acaeaaa3a10ecd48.json  query-80a1a3ff9c78296db807e96c8b25a5774e4f72be53748541e28275fa9daf9bd1.json  query-a7e322eff51b5957b17dbc640f5c080bf946d0a8a8e6f04f1cacb7272fa4b5a1.json  query-a8f7697d450886e6a5af017e9edfc78679620a2d4d7c7a60cdfccd9e061b1ea7.json  query-c4171fb2c4eb85f0662b8249fd5f2e09fa0a62775bae5969f8190cc4cceaf90f.json  query-febd5bdc5e99b4607a9d24c63dbf24ee979c774afe83a76df1d4c9acad51698e.json
migrations/: 20241122100223_create_traffic_measurements.down.sql  20241122100223_create_traffic_measurements.up.sql
src/: errors.rs  main.rs  state.rs
src/dto/: measurement.rs
src/models/: location.rs  mod.rs  traffic_measurement.rs  traffic_measurements.rs  traffic_vehicle_measurement.rs
src/tasks/: mod.rs  seed_traffic_data.rs
